2001-01-10  Frank Ch. Eigler  <fche@redhat.com>

	* sidcpuutil.h (basic_cpu): Inherit from fixed_relation_map_component.
	Define a operator new/delete pair to poison new memory.

2000-11-27  Frank Ch. Eigler  <fche@redhat.com>

	* sidattrutil.h (attribute_coder_alias): New coder for attribute
	aliases.
	(fixed_attribute_map_component::add_attribute_alias): New functions.

2000-10-13  Jeff Johnston <jjohnstn@redhat.com>

	* sidbusutil.h (passthrough_word_bus): Made target protected.
	* sidcpuutil.h (add_watchable_register): Overloaded to allow
	specifying using a virtual attribute and a parameterized virtual
	attribute.
	(add_watchable_ro_register): New method to specify a read-only
	watchable register.

2000-09-22  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.in: Regenerated.

2000-09-13  Jeff Johnston  <jjohnstn@redhat.com>

	* sidbusutil.h (passthrough_word_bus): Made word_write and
	word_read methods abstract virtual.
	(harvard_bus): Changed map_addr_to_bus to accept a pointer to
	address so address can be modified once segment information is
	used.  Address subtracts first appropriate segment.  GB_READ
	and GB_WRITE macros changed appropriately to pass pointer to
	address.

2000-09-06  Frank Ch. Eigler  <fche@redhat.com>

	* sidbusutil.h (harvard_bus): Switch "unsigned int" -> "host_int_4"
	throughout.
	* sidcpuutil.h (basic_cpu ctor): Reorder initializers.

2000-08-30  Jeff Johnston  <jjohnstn@redhat.com>

	* sidbusutil.h (passthrough_word_bus): Changed SID_GB_READ and
	SID_GB_WRITE macros to properly access bus pointer.
	(harvard_bus): Changed protected and private members to be
	public and protected, respectively.
	* sidcpuutil.h (basic_cpu): Made data_bus and insn_bus protected
	members instead of private.  Also changed read_insn_memory template
	to add address parameter in addition to pc.  Added write_insn_memory
	template.  Changed read_insn_memory_1, read_insn_memory_2, 
	read_insn_memory_4, and read_insn_memory_8 to use extra parameter